updated project files

--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -7,11 +7,11 @@
     </script>
 
 <div class="row mt-3">
-    <div class="col-8 offset-3">
+    <div class="col-md-8 offset-md-2">
         <h3><%= listing.title %></h3>
     </div>
 
-    <div class="card col-6 offset-3 listing-card" >
+    <div class="card col-md-8 offset-md-2 listing-card" >
         <img src="<%= listing.image.url %>" class="card-img-top show-img" alt="listing_img">
         <div class="card-body">
           <p class="card-text">
@@ -28,7 +28,7 @@
     
     <% if(currUser && currUser._id.equals(listing.owner._id)) { %>
     <div class="btns">
-        <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark col-1 offset-3 edit-btn">Edit</a>
+        <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark offset-3 edit-btn">Edit</a>
     
     <form action="/listings/<%= listing.id %>?_method=DELETE" method="post">
         <button  class="btn btn-dark offset-5 ">Delete</button>
@@ -36,7 +36,7 @@
     </div>
     <% } %>
 
-    <div class="col-8 offset-2 mb-3">
+    <div class="col-10 offset-1 mb-3">
         
         <% if(currUser){ %>
             <hr>
@@ -98,7 +98,7 @@
        
     </div>
 
-     <div class="col-8 offset-2 mb-3">
+     <div class="col-10 offset-2 mb-3">
             <h3>Where you'll be</h3>
             <div id="map"></div>
      </div>
